# simd-image-filters

./: .gitattributes  .gitignore  README.md  resultadosAligned16.csv  resultadosO0.csv  resultadosSharpen1PixelC.csv
benchmarks/: README.md  pyproject.toml
benchmarks/benchmarks/: data.py  plot_impl_base.py  utils_plot.py
benchmarks/data/: resultados-manchas-asm-desaprobado.csv  resultadosO0-asmNotAligned.csv  resultadosO3-asmNotAligned.csv  resultadosOffsetPADDQvsPOR.csv  resultadosSharpen1PixelASM.csv
doc/: 1 pixel analisis.odt  Cuadrados sin pshuffle.odt  informe.tex
src/: .gdb_history  Makefile  cli.c  tp2.c
src/filters/: Cuadrados.c  Cuadrados_asm.asm  Cuadrados_c.c  Makefile  Manchas.c  Manchas_asm.asm  Manchas_c.c  Offset.c  Offset_asm.asm  Offset_c.c  Ruido.c  Ruido_asm.asm  Ruido_c.c  Sharpen.c  Sharpen_asm.asm  Sharpen_c.c
src/helper/: Makefile
src/tests/: 3_correr_test_mem.sh  4_correr_gdb.sh  libtest.py  tp2catedra
