[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = ""
authors = ["Joaquín P. Centeno <jpcenteno@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.0"
pandas = "^0.24.2"
ipython = "^7.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
plot_base = "benchmarks.plot_impl_base:__main"
